--- a/Esra.Web/Views/SalaryReviewAnalysis/_SalaryReviewAnalysisSearchResults.cshtml
+++ b/Esra.Web/Views/SalaryReviewAnalysis/_SalaryReviewAnalysisSearchResults.cshtml
@@ -111,7 +111,7 @@
     <fieldset>
         <br />
         <h3>
-            &nbsp;&nbsp;No Results Found Matching Search Parameters</h3>
+            &nbsp;&nbsp;No Matching Results Found</h3>
         <br />
     </fieldset>
     }
