--- a/Esra.Web/Views/SalaryReviewAnalysis/_SalaryReviewAnalysisSearchParamaters.cshtml
+++ b/Esra.Web/Views/SalaryReviewAnalysis/_SalaryReviewAnalysisSearchParamaters.cshtml
@@ -139,15 +139,15 @@ null),
             creationDateString.value = getDate();
         };
 
-        function getDate()
-        {
+        function getDate() {
             var today = new Date();
             var dd = today.getDate();
             var mm = today.getMonth() + 1; //January is 0!
             var yyyy = today.getFullYear();
             if (dd < 10) { dd = '0' + dd }
             if (mm < 10) { mm = '0' + mm }
-            return = mm + '/' + dd + '/' + yyyy;
+
+            return mm + '/' + dd + '/' + yyyy;
         }
 
         //-->
