--- a/Esra.Web/Views/SalaryReviewAnalysis/Index.cshtml
+++ b/Esra.Web/Views/SalaryReviewAnalysis/Index.cshtml
@@ -9,4 +9,5 @@
     @Html.Partial("_SalaryReviewAnalysisSearchResults")
 </div>
 <div id="new-salary-review-analysis-employee-selector">
+    @Html.Partial("_NewSalaryReviewAnalysisEmployeeSelector")
 </div>
