--- a/Esra.Web/Views/SalaryReviewAnalysis/Create.cshtml
+++ b/Esra.Web/Views/SalaryReviewAnalysis/Create.cshtml
@@ -1,15 +1,10 @@
 ﻿@model Esra.Web.Models.SalaryReviewAnalysisEditorViewModel
 @{
-    ViewBag.Title = "Create/Edit";
+    ViewBag.Title = "Create";
 }
-<div id="salary-scale-details">
-    <h2>
-        Salary Scale Details</h2>
-    @Html.Partial("_SalaryScale", Model.SalaryScaleViewModel)
-</div>
-<div id="employee-details">
-    @Html.Partial("_EmployeeDetails")
-</div>
-<div id="salary-review-analysis">
-    @Html.Partial("_SalaryReviewAnalysis")
+<div id="salary-review-analysis-editor">
+    @using (@Html.BeginForm("Create", "SalaryReviewAnalysis", FormMethod.Post))
+    {
+        @Html.Partial("_SalaryReviewAnalysisEditor")
+    }
 </div>
