--- a/Esra.Web/Views/SalaryReviewAnalysis/Edit.cshtml
+++ b/Esra.Web/Views/SalaryReviewAnalysis/Edit.cshtml
@@ -1,8 +1,10 @@
-﻿@model SalaryReviewAnalysisViewModel
-
+﻿@model Esra.Web.Models.SalaryReviewAnalysisEditorViewModel
 @{
     ViewBag.Title = "Edit";
 }
-
-<h2>Edit</h2>
-
+<div id="salary-review-analysis-editor">
+    @using (@Html.BeginForm("Edit", "SalaryReviewAnalysis", FormMethod.Post))
+    {
+        @Html.Partial("_SalaryReviewAnalysisEditor")
+    }
+</div>
