Re-factored to use CreateEdit view/action for both credit and edit.
Renamed "Edit" view/action to CreateEdit.
Renamed "Select" view/action to Create.

--- a/Esra.Web/Views/SalaryReviewAnalysis/_NewSalaryReviewAnalysisEmployeeSelector.cshtml
+++ b/Esra.Web/Views/SalaryReviewAnalysis/_NewSalaryReviewAnalysisEmployeeSelector.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Esra.Web.Models.SalaryReviewAnalysisViewModel
 <div id="divCreateNewSRA">
-    @using (@Html.BeginForm("Select", "SalaryReviewAnalysis", FormMethod.Get))
+    @using (@Html.BeginForm("Create", "SalaryReviewAnalysis", FormMethod.Get))
     {
         <div class="editor-field">
             &nbsp;@Html.DropDownListFor(x => x.NewSraEmployee,
