--- a/Esra.Web/Views/SalaryReviewAnalysis/_SalaryReviewAnalysisEditor.cshtml
+++ b/Esra.Web/Views/SalaryReviewAnalysis/_SalaryReviewAnalysisEditor.cshtml
@@ -1,21 +1,23 @@
 ﻿@model Esra.Web.Models.SalaryReviewAnalysisEditorViewModel
+<h2>
+    Salary Scale Details</h2>
 <div id="salary-scale-details">
-    <h2>
-        Salary Scale Details</h2>
     @Html.Partial("_SalaryScale", Model.SalaryScaleViewModel)
 </div>
 <div id="employee-details">
     @Html.Partial("_EmployeeDetails")
 </div>
 <div id="salary-review-analysis">
-    @Html.Partial("_SalaryReviewAnalysis")
-</div>
-<div id="save-cancel-buttons">
-    <center>
-        <br />
-        &nbsp;<input type="submit" name="btnSubmitSalaryReviewAnalysis" value="Save Salary Review Analysis"
-            id="btnSubmitSalaryReviewAnalysis" />
-        &nbsp;
-        <input type="submit" name="btnCancelSalaryReviewAnalysis" value="Cancel/Back" id="btnCancelSalaryReviewAnalysis" />
-    </center>
+    @using (@Html.BeginForm("CreateEdit", "SalaryReviewAnalysis", FormMethod.Post))
+    {
+        @Html.Partial("_SalaryReviewAnalysis")
+
+        <center>
+            <br />
+            <a href='@Url.Action("Index", "SalaryReviewAnalysis")' class="buttons">
+                <img alt="Back" src='@Url.Image("arrow_left.jpg")' class="back_button" />&nbsp;Cancel/Back</a>
+            &nbsp; &nbsp;<input type="submit" name="btnSubmitSalaryReviewAnalysis" value="Save Salary Review Analysis"
+                id="btnSubmitSalaryReviewAnalysis" />
+        </center>
+    }
 </div>
