--- a/Esra.Web/Views/SalaryReviewAnalysis/Create.cshtml
+++ b/Esra.Web/Views/SalaryReviewAnalysis/Create.cshtml
@@ -2,9 +2,92 @@
 @{
     ViewBag.Title = "Create";
 }
-<div id="salary-review-analysis-editor">
-    @using (@Html.BeginForm("Create", "SalaryReviewAnalysis", FormMethod.Post))
+<div id="vSelectReviewType">
+    <br />
+    <label id="lblNewSRAEmployeeLabel" style="font-weight: bold;">
+        Employee Name:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
+    @Model.SelectedEmployee.FullName
+    <br />
+    <br />
+    <label id="lblOriginalTitleCodeLabel" style="font-weight: bold;">
+        Current Title Code:&nbsp;&nbsp;&nbsp;&nbsp;</label>
+    @Model.SelectedEmployee.TitleCode
+    <br />
+    <br />
+    <label id="lblSelectReviewTypeView" style="font-weight: bold; font-size: large;">
+        Select a Salary Review Analysis Type:</label>
+    <br />
+    <br />
+    @using (@Html.BeginForm("CreateEdit", "SalaryReviewAnalysis", FormMethod.Get))
     {
-        @Html.Partial("_SalaryReviewAnalysisEditor")
+        @Html.Hidden("NewSraEmployee", Model.SelectedEmployee.id)
+        <table id="tblCurrentProposedTitleCodes">
+            <tr>
+                <td>
+                    @Html.DropDownListFor(x => x.ProposedTitle,
+                        new SelectList(Model.ProposedTitles,
+                        "TitleCode",
+                        "TitleCode_Name",
+                        String.IsNullOrEmpty(Model.SelectedEmployee.TitleCode) == false ? Model.SelectedEmployee.TitleCode : String.Empty),
+                        null, new { id = "ddlProposedTitles" }
+                        )
+                </td>
+                <td style="padding-left: 10px;">
+                    <img id="imgReclassArrow" alt="reclass arrow" class="buttons" src="../../Images/arrow_left.jpg"
+                        style="width: 14px;" />
+                    &nbsp;Select a different Title Code to conduct a Reclassification Review.
+                </td>
+                <td>
+                    &nbsp;
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <center>
+                        -- or --</center>
+                </td>
+                <td>
+                    &nbsp;
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <input type="submit" id="btnDoEquityReview" value="Perform Equity Review" onclick="btnDoEquityReview_Click"
+                        style="width: 320px;" />
+                </td>
+                <td style="text-align: left; padding-left: 10px;">
+                    <img id="imgEquityArrow" alt="equity arrow" class="buttons" src="../../Images/arrow_left.jpg"
+                        style="width: 14px;" />
+                    &nbsp;Select &quot;Perform Equity Review&quot; to conduct an Equity Review.
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2">
+                    &nbsp;
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <input type="button" id="btnCancelSalaryReviewAnalysis" onclick="history.go(-1)"
+                        value="Cancel/Back" />
+                </td>
+                <td>
+                    &nbsp;
+                </td>
+            </tr>
+        </table>
     }
+    <script language="JavaScript" type="text/javascript">
+    <!--        //
+        $('#ddlProposedTitles').change(function () {
+
+            var proposedTitle = $('#ddlProposedTitles')[0];
+
+            if (proposedTitle.value.length > 0) {
+                $(this).parents('form').submit();
+            }
+            return false;
+        });
+    //-->
+    </script>
 </div>
