--- a/Esra.Web/Views/SalaryReviewAnalysis/Details.cshtml
+++ b/Esra.Web/Views/SalaryReviewAnalysis/Details.cshtml
@@ -30,7 +30,7 @@
     <div id="back-edit-print">
         <a href='@Url.Action("Index", "SalaryReviewAnalysis")' class="buttons">
             <img alt="Back" src='@Url.Image("arrow_left.jpg")' class="back_button" />&nbsp;Back</a>
-        <a href='@Url.Action("Edit", "SalaryReviewAnalysis", new { ReferenceNumber = @Model.SalaryReviewAnalysis.ReferenceNumber })' class="buttons" >
+        <a href='@Url.Action("CreateEdit", "SalaryReviewAnalysis", new { ReferenceNumber = @Model.SalaryReviewAnalysis.ReferenceNumber })' class="buttons" >
             <img alt="Edit Salary Review Analysis" src='@Url.Image("edit.png")' class="edit_button" />&nbsp;Edit
         </a><a id="lbtnPrint" title="Print" href="javascript:__doPostBack('lbtnPrint','')"
             class="buttons" onclick="window.print();return false;">
