The employee edit screen is now showing the correct fields, and is returning those fields to the controller via an ajax call

--- a/Esra.Web/Views/EmployeeSalaryComparison/_Employees.cshtml
+++ b/Esra.Web/Views/EmployeeSalaryComparison/_Employees.cshtml
@@ -90,7 +90,7 @@
             <tbody>
                 @foreach (Esra.Core.Domain.Employee emp in Model.Employees)
                 {
-                    <tr>
+                    <tr data-id="e-@emp.Id">
                         <td>
                             <a href="#" class="edit-row">Edit</a>
                             <span style="display: none;" class="career-date-checked";>@(emp.PPSCareerHireDateChecked !=
