--- a/Esra.Web/Views/EmployeeSalaryComparison/Details.cshtml
+++ b/Esra.Web/Views/EmployeeSalaryComparison/Details.cshtml
@@ -59,10 +59,27 @@
                     '@Url.Action("Edit")',
                     data,
                     function (result) {
+                        var resultrow = employeeRow[0];
                         if (!result) {
                             alert("There was a problem saving the data for this employee");
                         }
-                        dtable.fnClose(employeeRow[0]);
+                        else {
+                            //update the row
+                            dtable.fnUpdate(data.hireDate, resultrow, 6, false, false); //False params to not redraw until second call
+                            dtable.fnUpdate(data.titleDate, resultrow, 8, false, false);
+                            dtable.fnUpdate(data.experienceDate, resultrow, 10, false, false);
+                            dtable.fnUpdate(data.deptComments, resultrow, 13, false, false);
+                            dtable.fnUpdate(data.deansComments, resultrow, 14);
+
+                            //updated the headers for the pps checked columns
+                            if (data.hireChecked) {
+                                employeeRow.find("td.hire-date").addClass("date-checked");
+                            }
+                            if (data.titleChecked) {
+                                employeeRow.find("td.title-date").addClass("date-checked");
+                            }
+                        }
+                        dtable.fnClose(resultrow);
                     }
                 );
 
@@ -135,7 +152,7 @@
             sOut += '<tr><td>Title Begin Date: <input class="title-date" type="text" value="' + aData[8] + '"/>&nbsp;<input class="title-checked" type="checkbox" ' + (apptChecked ? 'checked' : String.Empty) + ' />Verified in PPS?</td></tr>';
             sOut += '<tr><td>Experience Begin Date: <input class="experience-date" type="text" value="' + aData[10] + '"/></td></tr>';
             sOut += '<tr><td>Department Comments: <textarea class="dept-comments" rows="3" cols="20">' + aData[13] + '</textarea></td></tr>';
-            sOut += '<tr><td>Dean\'s Office Comments: <textarea class="dean-comments" rows="3" cols="20">' + aData[14] + '</textarea></td></tr>';
+            sOut += '<tr><td>Dean\'s Office Comments: <textarea class="deans-comments" rows="3" cols="20">' + aData[14] + '</textarea></td></tr>';
             sOut += '<tr><td><input class="save-employee" data-id="' + rowId + '" type="submit" value="Save" />&nbsp;&nbsp;<a class="close-row" href="#">Close</a></td></tr>';
             sOut += '</table>';
             return sOut;
