--- a/Esra.Web/Views/EmployeeSalaryComparison/Details.cshtml
+++ b/Esra.Web/Views/EmployeeSalaryComparison/Details.cshtml
@@ -56,51 +56,52 @@
 
                 row.html("<tr><td>Saving Data.......<td></tr>");
 
-                $.post(
-                    '@Url.Action("Edit")',
-                    data,
-                    function (result) {
+                $.ajax({
+                    url: '@Url.Action("Edit")',
+                    data: data,
+                    type: 'POST',
+                    error: function() {
+                        alert("There was a problem saving the data for this employee. Please retry your request, and if the problem persists contact application support.");
+                        dtable.fnClose(employeeRow[0]);
+                    },
+                    success: function (result) {
                         var resultrow = employeeRow[0];
-                        if (!result) {
-                            alert("There was a problem saving the data for this employee");
+                        //update the row
+                        dtable.fnUpdate(data.hireDate, resultrow, 6, false, false); //False params to not redraw until second call
+                        dtable.fnUpdate(data.titleDate, resultrow, 8, false, false);
+                        dtable.fnUpdate(data.experienceDate, resultrow, 10, false, false);
+                        dtable.fnUpdate(data.deptComments, resultrow, 13, false, false);
+                        dtable.fnUpdate(data.deansComments, resultrow, 14);
+
+                        //updated the headers for the pps checked/adjusted columns
+                        if (data.hireChecked) {
+                            employeeRow.find("td.hire-date").addClass("date-checked");
                         }
                         else {
-                            //update the row
-                            dtable.fnUpdate(data.hireDate, resultrow, 6, false, false); //False params to not redraw until second call
-                            dtable.fnUpdate(data.titleDate, resultrow, 8, false, false);
-                            dtable.fnUpdate(data.experienceDate, resultrow, 10, false, false);
-                            dtable.fnUpdate(data.deptComments, resultrow, 13, false, false);
-                            dtable.fnUpdate(data.deansComments, resultrow, 14);
-
-                            //updated the headers for the pps checked/adjusted columns
-                            if (data.hireChecked) {
-                                employeeRow.find("td.hire-date").addClass("date-checked");
-                            }
-                            else {
-                                employeeRow.find("td.hire-date").removeClass("date-checked");
-                            }
-                            if (data.titleChecked) {
-                                employeeRow.find("td.title-date").addClass("date-checked");
-                            }
-                            else {
-                                employeeRow.find("td.title-date").removeClass("date-checked");
-                            }
-                            if (result.hireAdjusted) {
-                                employeeRow.find("td.hire-date").addClass("date-adjusted");
-                            }
-                            else {
-                                employeeRow.find("td.hire-date").removeClass("date-adjusted");
-                            }
-                            if (result.titleAdjusted) {
-                                employeeRow.find("td.title-date").addClass("date-adjusted");
-                            }
-                            else {
-                                employeeRow.find("td.title-date").removeClass("date-adjusted");
-                            }
+                            employeeRow.find("td.hire-date").removeClass("date-checked");
                         }
+                        if (data.titleChecked) {
+                            employeeRow.find("td.title-date").addClass("date-checked");
+                        }
+                        else {
+                            employeeRow.find("td.title-date").removeClass("date-checked");
+                        }
+                        if (result.hireAdjusted) {
+                            employeeRow.find("td.hire-date").addClass("date-adjusted");
+                        }
+                        else {
+                            employeeRow.find("td.hire-date").removeClass("date-adjusted");
+                        }
+                        if (result.titleAdjusted) {
+                            employeeRow.find("td.title-date").addClass("date-adjusted");
+                        }
+                        else {
+                            employeeRow.find("td.title-date").removeClass("date-adjusted");
+                        }
+
                         dtable.fnClose(resultrow);
                     }
-                );
+                });
 
                 e.preventDefault();
             });
