--- a/Esra.Web/Views/EmployeeSalaryComparison/Details.cshtml
+++ b/Esra.Web/Views/EmployeeSalaryComparison/Details.cshtml
@@ -28,6 +28,7 @@
                 var row = $(this).parents("tr");
 
                 dtable.fnOpen(row[0], fnFormatDetails(dtable, row), 'details');
+                row.next().find("input.datepicker").datepicker(); //setup datepicker for the new datetime inputs
                 e.preventDefault();
             });
 
@@ -52,7 +53,6 @@
                     deptComments: row.find('.dept-comments').val(),
                     deansComments: row.find('.deans-comments').val()
                 }
-                console.dir(data); //TODO: Remove data check
 
                 row.html("<tr><td>Saving Data.......<td></tr>");
 
@@ -60,7 +60,7 @@
                     url: '@Url.Action("Edit")',
                     data: data,
                     type: 'POST',
-                    error: function() {
+                    error: function () {
                         alert("There was a problem saving the data for this employee. Please retry your request, and if the problem persists contact application support.");
                         dtable.fnClose(employeeRow[0]);
                     },
@@ -168,9 +168,9 @@
             var sOut = '';
             sOut += '<table cellpadding="5" cellspacing="0" border="0" style="padding-left:50px;">';
             sOut += '<tr><td>Editing ' + aData[5] + '</td></tr>';
-            sOut += '<tr><td>Hire Date: <input class="hire-date" type="text" value="' + aData[6] + '"/>&nbsp;<input class="hire-checked" type="checkbox" ' + (careerChecked ? 'checked' : String.Empty) + ' />Checked in PPS?</td></tr>';
-            sOut += '<tr><td>Title Begin Date: <input class="title-date" type="text" value="' + aData[8] + '"/>&nbsp;<input class="title-checked" type="checkbox" ' + (apptChecked ? 'checked' : String.Empty) + ' />Checked in PPS?</td></tr>';
-            sOut += '<tr><td>Experience Begin Date: <input class="experience-date" type="text" value="' + aData[10] + '"/></td></tr>';
+            sOut += '<tr><td>Hire Date: <input class="hire-date datepicker" type="text" value="' + aData[6] + '"/>&nbsp;<input class="hire-checked" type="checkbox" ' + (careerChecked ? 'checked' : String.Empty) + ' />Checked in PPS?</td></tr>';
+            sOut += '<tr><td>Title Begin Date: <input class="title-date datepicker" type="text" value="' + aData[8] + '"/>&nbsp;<input class="title-checked" type="checkbox" ' + (apptChecked ? 'checked' : String.Empty) + ' />Checked in PPS?</td></tr>';
+            sOut += '<tr><td>Experience Begin Date: <input class="experience-date datepicker" type="text" value="' + aData[10] + '"/></td></tr>';
             sOut += '<tr><td>Department Comments: <textarea class="dept-comments" rows="3" cols="20">' + aData[13] + '</textarea></td></tr>';
             sOut += '<tr><td>Dean\'s Office Comments: <textarea class="deans-comments" rows="3" cols="20">' + aData[14] + '</textarea></td></tr>';
             sOut += '<tr><td><input class="save-employee" data-id="' + rowId + '" type="submit" value="Save" />&nbsp;&nbsp;<a class="close-row" href="#">Close</a></td></tr>';
